syntax = "proto3";
package rtObjSync;

enum Operation {
  ADD = 0;
  DEL = 1;
  MOV = 2;
}

enum TargetType {
  DOCUMENT = 0;
  STATE = 1;
}

enum ReqType {
  ALL_ACCOUNT = 0;
}

message Open {
  string jwt = 1;
  string accountInfo = 2;
}

message Connected {
  string sessionId = 1;
  bool hasInitialData = 2;
  string data = 3;
  uint32 revision = 4;
}

message Close {
  int32 reason = 1;
}

message Request {
  int32 type = 1;
}

message AccountAll {
  string documentName = 1;
  string allAccounts = 2;
}

message AccountUpdate {
  string accountInfo = 1;
}

message AccountNotify {
  string sessionId = 1;
  Operation opType = 2;
  string accountInfo = 3;
}

message DocumentUpload {
  string data = 1;
}

message DataUpdate {
  string sessionId = 1;
  TargetType target = 2;
  Operation opType = 3;
  uint32 revision = 4;
  string targetKey = 5;
  string data = 6;
}

message Message {
  enum MessageType {
    OPEN = 0;
    CONNECTED = 1;
    CLOSE = 2;
    REQUEST = 3;
    ACCOUNT_ALL = 4;
    ACCOUNT_UPDATE = 5;
    ACCOUNT_NOTIFY = 6;
    DOCUMENT_UPLOAD = 7;
    DATA_UPDATE = 8;
  }
  MessageType msgType = 1;

  oneof body {
    Open open = 2;
    Connected connected = 3;
    Close close = 4;
    Request request = 5;
    AccountAll accountAll = 6;
    AccountUpdate accountUpdate = 7;
    AccountNotify accountNotify = 8;
    DocumentUpload doc = 9;
    DataUpdate data = 10;
  }
}
